--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Tomori_Nao.github.io</title>
+  </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <h1>Hello World</h1>
+  <p>I'm Hosted With GitHub Pages.</p>
 </body>
 </html>
